[package]
name = "combine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8"
rand = "0.8.5"

# Enable optimization for dependencies 
[profile.dev.package."*"]
opt-level = 3

# Enable small optimization for own code
[profile.dev]
opt-level = 1
