[package]
name = "combine"
version = "0.1.0"
edition = "2021"
description="Simple Tetris-style math puzzle game made for Bevy Jam #2"
license="MIT"

[dependencies]
bevy = "0.8.1"
rand = "0.8.5"

# Enable optimization for dependencies 
[profile.dev.package."*"]
opt-level = 3

# Enable small optimization for own code
[profile.dev]
opt-level = 1
